Added image comparison code.
# Conflicts:
#	src/GraffLibAPI/GraffLibAPI/GraffLibAPI/controllers/marker_images_controller.py
#	src/GraffLibAPI/GraffLibAPI/GraffLibAPI/utils/location_helper.py
